# icpsr-36404-analysis

./: Cargo.toml  readme.md
notebooks/: pysubgroup.ipynb
paper/: main.tex  sbc-template.bib
src/: args.rs  itemset.rs  main.rs  util.rs
src/data/: distribution.rs  mod.rs
