[package]
name = "icpsr-36404-analysis"
description = "Analysis for the ICPSR 36404 dataset using descriptive machine learning"
version = "0.1.0"
edition = "2018"
authors = ["gahag <gabriel.s.b@live.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "2.33"
lazy_static = "1.4"
log = "0.4"
simplelog = "0.8"

serde = { version = "1", features = ["derive"] }
rmp-serde = "0.14.4"

bitvec = { version = "0.19", features = ["serde"] }
bitmatrix = { version = "0.1", features = ["serde"] }

onehot = { version = "0.1", features = ["derive", "matrix"] }
dci = { version = "0.2", features = ["matrix"] }

[profile.release]
lto = true
